# fast-embed-api

./: .gitignore  README.md  main.py  pyproject.toml
src/api/: __init__.py  endpoints.py  middleware.py  models.py
src/core/: __init__.py  config.py  embeddings.py
src/utils/: __init__.py  batch_processing.py  utils.py
